--- a/brain4it-manager/brain4it-manager-android/src/main/res/drawable/indicator.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/drawable/indicator.xml
@@ -2,12 +2,22 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
   <item>
     <shape xmlns:android="http://schemas.android.com/apk/res/android" 
-             android:shape="rectangle">
+           android:shape="rectangle">
       <padding 
         android:left="4dp"
         android:top="4dp"
         android:right="4dp"
         android:bottom="4dp" />
+    </shape>
+  </item>
+  <item>
+    <shape xmlns:android="http://schemas.android.com/apk/res/android"
+           android:shape="rectangle">
+      <corners
+        android:radius="3dp" />
+      <stroke
+        android:width="1dp"
+        android:color="#C0C0C0" />
     </shape>
   </item>
   <item>
@@ -18,8 +28,6 @@
         android:top="4dp"
         android:right="4dp"
         android:bottom="4dp" />
-      <solid android:color="#0000FF"/>
-      <stroke android:width="2dp" android:color="#000000" />
     </shape>
   </item>
 </layer-list>
