Visual enhacements in android applications.

--- a/brain4it-manager/brain4it-manager-android/src/main/res/menu/server_list_menu.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/menu/server_list_menu.xml
@@ -12,6 +12,8 @@
         android:title="@string/sortServers" />
   <item android:id="@+id/threadDump"
         android:title="@string/threadDump" />
+  <item android:id="@+id/about"
+        android:title="@string/about" />
   <item android:id="@+id/exit"
         android:title="@string/exit" />
 </menu>
