--- a/brain4it-server/brain4it-server-android/src/main/res/menu/server_setup_menu.xml
+++ b/brain4it-server/brain4it-server-android/src/main/res/menu/server_setup_menu.xml
@@ -6,4 +6,6 @@
         android:title="@string/clear" />
   <item android:id="@+id/threadDump"
         android:title="@string/threadDump" />
+  <item android:id="@+id/about"
+        android:title="@string/about" />
 </menu>
