--- a/brain4it-manager/brain4it-manager-android/src/main/res/values/theme.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/values/theme.xml
@@ -21,5 +21,13 @@
          parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
     <item name="android:textColor">#FFFFFF</item>
     <item name="android:textStyle">bold</item>
-  </style>  
+  </style>
+
+  <style name="fullScreenDialog">
+      <item name="android:windowFrame">@null</item>
+      <item name="android:windowIsFloating">true</item>
+      <item name="android:windowContentOverlay">@null</item>
+      <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+      <item name="android:windowSoftInputMode">stateUnchanged</item>
+  </style>
 </resources>
