--- a/brain4it-manager/brain4it-manager-android/src/main/res/layout/console.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/layout/console.xml
@@ -7,54 +7,62 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="top">
-    <Button
+    <ImageButton
       android:id="@+id/parenthesis_button"
       android:layout_width="0dp"
       android:layout_height="match_parent"
-      android:layout_weight="0.125"
-      android:fontFamily="monospace"
-      android:textSize="13sp"
-      android:text="()" />
-    <Button
+     android:src="@drawable/parenthesis"
+      android:contentDescription="@string/parenthesis" 
+      android:layout_weight="0.125"/>
+    <ImageButton
+      android:id="@+id/arrow_button"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:src="@drawable/arrow"
+      android:contentDescription="@string/arrow"
+      android:layout_weight="0.125" />
+    <ImageButton
       android:id="@+id/complete_button"
       android:layout_width="0dp"
       android:layout_height="match_parent"
-      android:layout_weight="0.125"
-      android:fontFamily="monospace"
-      android:textSize="13sp"
-      android:text="->" />
-    <Button
+      android:src="@drawable/complete"
+      android:contentDescription="@string/complete"
+      android:layout_weight="0.125" />
+    <ImageButton
       android:id="@+id/functions_button"
       android:layout_width="0dp"
       android:layout_height="match_parent"
-      android:layout_weight="0.125"
-      android:textSize="15sp"
-      android:textAllCaps="false" />
-    <Button
+      android:src="@drawable/functions"
+      android:contentDescription="@string/functions"
+      android:layout_weight="0.125" />
+    <ImageButton
       android:id="@+id/clear_button"
       android:layout_width="0dp"
       android:layout_height="match_parent"
-      android:textSize="15sp"
+      android:src="@drawable/clear"
+      android:contentDescription="@string/clear"
       android:layout_weight="0.125" />
-    <Button
+    <ImageButton
       android:id="@+id/history_next_button"
       android:layout_width="0dp"
       android:layout_height="match_parent"
-      android:textSize="15sp"
+      android:src="@drawable/down"
+      android:contentDescription="@string/historyNext"
       android:layout_weight="0.125"/>
-    <Button
+    <ImageButton
       android:id="@+id/history_previous_button"
       android:layout_width="0dp"
       android:layout_height="match_parent"
-      android:textSize="15sp"
+      android:src="@drawable/up"
+      android:contentDescription="@string/historyPrevious"
       android:layout_weight="0.125"/>
-    <Button
+    <ImageButton
       android:id="@+id/execute_button"
       android:layout_width="0dp"
       android:layout_height="match_parent"
-      android:layout_weight="0.25"
-      android:textSize="15sp"
-      android:text="@string/execute"/>
+      android:src="@drawable/execute"
+      android:contentDescription="@string/execute"
+      android:layout_weight="0.125"/>
   </LinearLayout>
   <org.brain4it.manager.android.view.CodeListView
     android:id="@+id/output"
