--- a/brain4it-manager/brain4it-manager-android/src/main/res/layout/dashboard.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/layout/dashboard.xml
@@ -7,12 +7,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="top">
-    <Button
+    <ImageButton
       android:id="@+id/update_button"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_weight="0.125"
-      android:textSize="15sp" />
+      android:src="@drawable/update"
+      android:contentDescription="@string/update"
+      android:layout_weight="0.125" />
     <Spinner
       android:id="@+id/dashboard_spinner"
       android:layout_width="0dp"
