--- a/brain4it-manager/brain4it-manager-android/src/main/res/layout/dashboard.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/layout/dashboard.xml
@@ -6,18 +6,21 @@
   <LinearLayout android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="top">
+    android:background="#ffc1e3f3"
+    android:gravity="center_vertical">
     <ImageButton
       android:id="@+id/update_button"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:src="@drawable/update"
       android:contentDescription="@string/update"
+      android:background="@drawable/flat_button" 
       android:layout_weight="0.125" />
     <Spinner
       android:id="@+id/dashboard_spinner"
       android:layout_width="0dp"
       android:layout_weight="0.875"
+      android:background="@drawable/flat_button"
       android:layout_height="wrap_content" />
   </LinearLayout>
   <org.brain4it.manager.android.view.BoxGridLayout
