--- a/brain4it-manager/brain4it-manager-web/src/main/webapp/css/manager.css
+++ b/brain4it-manager/brain4it-manager-web/src/main/webapp/css/manager.css
@@ -333,8 +333,8 @@ button
   background-size: 10px;
   border:none;
   vertical-align: middle;
-  width:10px;
-  height:10px;
+  width:16px;
+  height:16px;
   cursor: pointer;
   margin-left: -14px;
   outline: none;
@@ -618,20 +618,23 @@ iframe.external
 
 .ball_button
 {
-  border: 1px solid black;
-  border-radius: 50%;
-  width: 12px;
-  height: 12px;
+  border: none;
+  width: 20px;
+  height: 20px;
   display: inline-block;
-  margin: 14px 4px 14px 4px;
+  margin: 12px 0px 12px 0px;
+  background-image: url(../images/ball.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
   background-color: transparent;
   padding: 0;
   outline: none;
+  cursor:pointer;
 }
 
 .ball_button.selected
 {
-  background-color: black;
+  background-image: url(../images/ball_selected.svg);
 }
 
 .expand_tab
