--- a/brain4it-manager/brain4it-manager-android/src/main/res/layout/module_setup.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/layout/module_setup.xml
@@ -22,7 +22,7 @@
     android:text="@string/accessKey"  />
   <EditText 
     android:id="@+id/accessKeyInput"
-    android:inputType="textNoSuggestions"
+    android:inputType="textVisiblePassword|textNoSuggestions"
     android:layout_width="match_parent"
     android:layout_margin="4dp"
     android:layout_height="wrap_content" />
