--- a/brain4it-manager/brain4it-manager-android/src/main/res/layout/server_setup.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/layout/server_setup.xml
@@ -22,7 +22,7 @@
     android:text="@string/serverUrl"  />
   <EditText 
     android:id="@+id/serverUrlInput"
-    android:inputType="textNoSuggestions"
+    android:inputType="textUri|textNoSuggestions"
     android:layout_width="match_parent" 
     android:layout_height="wrap_content" />
   <TextView
@@ -33,7 +33,7 @@
     android:text="@string/accessKey"  />
   <EditText 
     android:id="@+id/accessKeyInput"
-    android:inputType="textNoSuggestions"
+    android:inputType="textVisiblePassword|textNoSuggestions"
     android:layout_width="match_parent" 
     android:layout_height="wrap_content" />
   <Button
