--- a/brain4it-manager/brain4it-manager-android/src/main/res/drawable/display.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/drawable/display.xml
@@ -2,17 +2,18 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
   <item>
     <shape xmlns:android="http://schemas.android.com/apk/res/android" 
-             android:shape="rectangle">
+           android:shape="rectangle">
       <padding 
         android:left="4dp"
         android:top="4dp"
         android:right="4dp"
-        android:bottom="4dp" />
+        android:bottom="4dp" />      
+      <solid android:color="@android:color/transparent" />
     </shape>
   </item>
   <item>
     <shape xmlns:android="http://schemas.android.com/apk/res/android" 
-             android:shape="rectangle">
+           android:shape="rectangle">
       <padding 
         android:left="4dp"
         android:top="4dp"
