--- a/brain4it-manager/brain4it-manager-android/src/main/res/drawable/edit_text.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/drawable/edit_text.xml
@@ -8,7 +8,8 @@
         android:top="4dp"
         android:right="4dp"
         android:bottom="4dp" />
-      <stroke android:width="1dp" android:color="#c0c0c0" />
+        <stroke android:width="1dp" android:color="#c0c0c0" />
+        <solid android:color="@android:color/transparent" />
     </shape>
   </item>
 </layer-list>
