--- a/brain4it-manager/brain4it-manager-android/src/main/res/drawable/flat_button.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/drawable/flat_button.xml
@@ -6,4 +6,5 @@
     android:right="6dp"
     android:top="6dp"
     android:bottom="6dp"/>
+    <solid android:color="@android:color/transparent" />
 </shape>
