--- a/brain4it-manager/brain4it-manager-android/src/main/res/drawable/indicator.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/drawable/indicator.xml
@@ -8,6 +8,7 @@
         android:top="4dp"
         android:right="4dp"
         android:bottom="4dp" />
+      <solid android:color="@android:color/transparent" />
     </shape>
   </item>
   <item>
@@ -15,6 +16,7 @@
            android:shape="rectangle">
       <corners
         android:radius="3dp" />
+      <solid android:color="@android:color/transparent" />
       <stroke
         android:width="1dp"
         android:color="#C0C0C0" />
@@ -28,6 +30,7 @@
         android:top="4dp"
         android:right="4dp"
         android:bottom="4dp" />
+        <solid android:color="@android:color/transparent" />
     </shape>
   </item>
 </layer-list>
