--- a/brain4it-manager/brain4it-manager-swing/src/main/java/org/brain4it/manager/swing/ModuleDialog.form
+++ b/brain4it-manager/brain4it-manager-swing/src/main/java/org/brain4it/manager/swing/ModuleDialog.form
@@ -30,7 +30,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace min="0" pref="286" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="293" max="32767" attributes="0"/>
                       <Component id="okButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="cancelButton" min="-2" max="-2" attributes="0"/>
@@ -46,13 +46,14 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="keyTextField" max="32767" attributes="0"/>
                           <Component id="nameTextField" max="32767" attributes="0"/>
-                          <Group type="102" attributes="0">
-                              <Component id="iconComboBox" min="-2" max="-2" attributes="0"/>
+                          <Component id="keyTextField" alignment="1" max="32767" attributes="0"/>
+                          <Component id="leaveBlankLabel" max="32767" attributes="0"/>
+                          <Component id="scrollPane" alignment="1" max="32767" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="iconComboBox" min="-2" pref="200" max="-2" attributes="0"/>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
-                          <Component id="scrollPane" alignment="1" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -74,6 +75,8 @@
                   <Component id="keyTextField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
+              <Component id="leaveBlankLabel" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="iconLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="iconComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -85,7 +88,7 @@
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
-                      <Component id="scrollPane" max="32767" attributes="0"/>
+                      <Component id="scrollPane" pref="58" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -172,5 +175,17 @@
         </Component>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.JLabel" name="leaveBlankLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+          <ResourceString bundle="org/brain4it/manager/swing/resources/Manager.properties" key="LeaveBlankServerKey" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
+        </Property>
+        <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+          <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
+            <EmptyBorder bottom="8" left="1" right="1" top="0"/>
+          </Border>
+        </Property>
+      </Properties>
+    </Component>
   </SubComponents>
 </Form>
