--- a/brain4it-manager/brain4it-manager-android/src/main/res/layout/code_item.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/layout/code_item.xml
@@ -2,7 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/codeItem"
   android:layout_width="match_parent"
-  android:layout_height="0dp"
+  android:layout_height="wrap_content"
   android:layout_weight="1"
   android:padding="0dp"
   android:textSize="14sp"
