--- a/brain4it-manager/brain4it-manager-android/src/main/res/values/theme.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/values/theme.xml
@@ -5,19 +5,20 @@
     <item name="android:windowAnimationStyle">@null</item>
     <item name="android:homeAsUpIndicator">@drawable/home</item>
     <item name="android:actionOverflowButtonStyle">@style/Brain4itTheme.OverFlow</item>
+    <item name="android:contextPopupMenuStyle">@style/myContextPopupMenuStyle</item>
   </style>
 
   <style name="Brain4itTheme.ActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid">
     <item name="android:background">#0790D0</item>
     <item name="android:displayOptions">showTitle</item>
     <item name="android:titleTextStyle">@style/Brain4itTheme.ActionBar.TitleTextStyle</item>
-  </style>  
+  </style>
 
   <style name="Brain4itTheme.OverFlow" parent="@android:style/Widget.Holo.ActionButton.Overflow">
     <item name="android:src">@drawable/item_options</item>
   </style>
 
-  <style name="Brain4itTheme.ActionBar.TitleTextStyle" 
+  <style name="Brain4itTheme.ActionBar.TitleTextStyle"
          parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
     <item name="android:textColor">#FFFFFF</item>
     <item name="android:textStyle">bold</item>
@@ -29,5 +30,10 @@
       <item name="android:windowContentOverlay">@null</item>
       <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
       <item name="android:windowSoftInputMode">stateUnchanged</item>
+  </style>
+
+  <style name="myContextPopupMenuStyle"
+         parent="@android:style/Widget.Holo.Light.PopupMenu">
+      <item name="android:overlapAnchor">true</item>
   </style>
 </resources>
